[tool.poetry]
name = "langchain-learn"
version = "0.1.0"
description = ""
authors = ["Prem Kumar G <premkumarmvks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.14"
langchain-google-genai = "^1.0.1"
openai = "^1.16.1"
python-dotenv = "^1.0.1"
anthropic = "^0.21.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
